# ArcThumb

./: Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs
.github/workflows/: release.yml
examples/: make_icon.rs
installer/: arcthumb.iss
resources/: arcthumb-config.rc
src/: archive.rs  bitmap.rs  com.rs  decode.rs  elevation.rs  lib.rs  limits.rs  log.rs  registry.rs  settings.rs
src/archive/: detect.rs  fb2.rs  mobi.rs  mod.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
src/ebook/: epub.rs  fb2.rs  mod.rs
src/preview/: mod.rs  render.rs
tests/: com_integration.rs
ui/: main.slint
