[package]
name = "arcthumb"
version = "0.1.0"
edition = "2024"
description = "Windows Shell Extension that generates thumbnails for archive files (ZIP/RAR/7Z) containing images, including WebP and AVIF."
license = "MIT OR Apache-2.0"
repository = "https://github.com/remu1519/ArcThumb"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# JPEG XL decoding via the pure-Rust jxl-oxide crate.
# Disabled by default because it adds ~2.3 MB to the DLL
# (jxl-oxide pulls in rayon, tracing, brotli-decompressor, etc.)
# for a format that is not yet widely deployed.
# Enable with: cargo build --release --features jxl
jxl = ["dep:jxl-oxide"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
]}
winreg = "0.52"
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
unrar = "0.5"
tar = "0.4"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "tiff", "ico", "webp",
] }
jxl-oxide = { version = "0.11", features = ["image"], optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
