[package]
name = "arcthumb"
version = "0.1.0"
edition = "2024"
description = "Windows Shell Extension that generates thumbnails for archive files (ZIP/RAR/7Z) containing images, including WebP and AVIF."
license = "MIT OR Apache-2.0"
repository = "https://github.com/remu1519/ArcThumb"
readme = "README.md"

[lib]
# `cdylib` produces `arcthumb.dll` for Explorer; `rlib` lets the
# `arcthumb-config` binary target `use arcthumb::{settings, registry}`
# without duplicating the source.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "arcthumb-config"
path = "src/bin/arcthumb-config/main.rs"

[features]
default = []
# JPEG XL decoding via the pure-Rust jxl-oxide crate.
# Disabled by default because it adds ~2.3 MB to the DLL
# (jxl-oxide pulls in rayon, tracing, brotli-decompressor, etc.)
# for a format that is not yet widely deployed.
# Enable with: cargo build --release --features jxl
jxl = ["dep:jxl-oxide"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Globalization",
]}
winreg = "0.52"
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
unrar = "0.5"
tar = "0.4"
# Streaming XML parser used by the ebook backends (EPUB, FB2). Pure
# Rust, no allocator surprises, used by widely-deployed crates like
# `zip` and `sevenz-rust` already so it pulls no new dependencies.
quick-xml = "0.36"
# Used by the FB2 backend to decode the base64-encoded images that
# FictionBook embeds inline in the document. Pure Rust, ~25 KB.
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "tiff", "ico", "webp",
] }
jxl-oxide = { version = "0.11", features = ["image"], optional = true }
# UI toolkit for the `arcthumb-config` binary.
# Basic controls (button, label, check-box, radio-button, message-box)
# are included in the base crate without feature gating. We only opt
# out of the heavy optional modules we don't need: image-decoder,
# datetime-picker, rich-textbox, file-dialog, flexbox, etc.
native-windows-gui = { version = "1.0", default-features = false, features = [
    "cursor", "message-window", "menu", "frame",
] }
native-windows-derive = "1.0"

[build-dependencies]
# Compile and embed an application manifest so arcthumb-config.exe
# links against Common Controls v6. Without this, nwg fails to
# resolve `GetWindowSubclass` at process start and the exe won't
# launch. Applies to both the DLL and the exe; the DLL ignores it.
embed-resource = "2"

[dev-dependencies]
# Integration tests need to call Win32 APIs directly (LoadLibrary,
# GetProcAddress, SHCreateMemStream, GDI cleanup) and to talk to
# arcthumb.dll across the COM ABI like Explorer would.
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
]}
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# Used by archive::tests to compute the file/header CRCs needed to
# hand-craft a minimal RAR4 fixture in-memory (RAR is a proprietary
# write format, so there is no Rust crate that can produce one).
crc32fast = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
