[package]
name = "arcthumb"
version = "0.7.0"
edition = "2024"
description = "Windows Shell Extension that generates Explorer thumbnails and preview-pane previews for comic-book archives (ZIP/CBZ/RAR/CBR/7Z/CB7/CBT) and ebooks (EPUB/FB2/MOBI/AZW/AZW3)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/citrussoda-com/ArcThumb"
readme = "README.md"

[lib]
# `cdylib` produces `arcthumb.dll` for Explorer; `rlib` lets the
# `arcthumb-config` binary target `use arcthumb::{settings, registry}`
# without duplicating the source.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "arcthumb-config"
path = "src/bin/arcthumb-config/main.rs"

[features]
default = []
# JPEG XL decoding via the pure-Rust jxl-oxide crate.
# Disabled by default because it adds ~2.3 MB to the DLL
# (jxl-oxide pulls in rayon, tracing, brotli-decompressor, etc.)
# for a format that is not yet widely deployed.
# Enable with: cargo build --release --features jxl
jxl = ["dep:jxl-oxide"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]}
winreg = "0.52"
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
unrar = "0.5"
tar = "0.4"
# Streaming XML parser used by the ebook backends (EPUB, FB2). Pure
# Rust, no allocator surprises, used by widely-deployed crates like
# `zip` and `sevenz-rust` already so it pulls no new dependencies.
quick-xml = "0.36"
# Used by the FB2 backend to decode the base64-encoded images that
# FictionBook embeds inline in the document. Pure Rust, ~25 KB.
base64 = "0.22"
# Pure-Rust parser for the Amazon Kindle MOBI / AZW / AZW3 (KF8)
# container format. We only need cover-image extraction; the heavy
# parts of the crate (HTML rendering, dictionary lookup) aren't on
# our hot path.
mobi = "0.8"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "tiff", "ico", "webp",
] }
# Direct jpeg-decoder dep to access DCT-scale decoding (1/2, 1/4,
# 1/8). The image crate's `JpegDecoder` wraps zune-jpeg as of 0.25
# and no longer exposes `.scale()`, so we call the underlying
# library ourselves in the thumbnail hot path. Pure Rust, ~50 KB
# compiled. Only used for large-JPEG sources; other formats skip
# this decoder entirely.
jpeg-decoder = "0.3"
jxl-oxide = { version = "0.11", features = ["image"], optional = true }
# Slint is the GUI toolkit for the `arcthumb-config` binary. Strings
# are passed from Rust to the Slint UI via properties for now; the
# language is picked at startup from the registry override and OS
# locale. Switching to `@tr(...)` + gettext is a future refactor
# tracked in TODO.md.
#
# We pin to the software renderer instead of the default femtovg
# (OpenGL ES 2.0) so the config dialog still launches on hosts
# without GPU acceleration — Windows Sandbox, fresh VMs, machines
# with broken or missing GL drivers. arcthumb-config repaints rarely
# enough that the CPU renderer is invisible to the user, and it
# drops femtovg + glutin from the dependency tree.
slint = { version = "1.15", default-features = false, features = [
    "backend-winit",
    "renderer-software",
    "compat-1-2",
] }
# HTTP client for the update checker in arcthumb-config. Blocking API
# called from a background thread — no async runtime needed. Only
# referenced from the config binary; LTO strips it from the DLL.
ureq = { version = "3", default-features = false, features = ["rustls"] }

[build-dependencies]
# Compile and embed an application manifest so arcthumb-config.exe
# links against Common Controls v6. Without this, nwg fails to
# resolve `GetWindowSubclass` at process start and the exe won't
# launch. Applies to both the DLL and the exe; the DLL ignores it.
embed-resource = "2"
# Compiles `.slint` UI files into Rust code that the binary pulls in
# via `slint::include_modules!()`. Keep the version in sync with the
# `slint` runtime crate above.
slint-build = "1.15"

[dev-dependencies]
# Headless backend for Slint so the arcthumb-config GUI tests can
# create real Slint components and exercise the property setters /
# getters / callbacks without bringing up a window or requiring a
# display server. Keep the version pinned to the same minor as the
# `slint` runtime above.
i-slint-backend-testing = "1.15"
# Integration tests need to call Win32 APIs directly (LoadLibrary,
# GetProcAddress, SHCreateMemStream, GDI cleanup) and to talk to
# arcthumb.dll across the COM ABI like Explorer would.
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]}
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# Used by archive::tests to compute the file/header CRCs needed to
# hand-craft a minimal RAR4 fixture in-memory (RAR is a proprietary
# write format, so there is no Rust crate that can produce one).
crc32fast = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
